Add minified dependency on fastutil
Fastutil (https://github.com/vigna/fastutil) is an excellent
library for memory-efficient and fast collections. Gradle has
many algorithms that could benefit from these more efficient
data structures.

Since the library is huge (16MB), this change introduces a dependency
transformation that can minify external JAR files to only the classes
we need. This could be useful for shrinking the Gradle distribution
in general.

This commit only adds the classes necessary to make IntOpenHashSet
work, which will be used in a subsequent commit to make our incremental
Java compiler more memory efficient.

Signed-off-by: Stefan Oehme <stefan@gradle.com>

--- a/build.gradle
+++ b/build.gradle
@@ -181,6 +181,7 @@ apply from: "gradle/buildScanUserData.gradle"
 apply from: "gradle/taskCacheBuildScanUserData.gradle"
 apply from: "gradle/versioning.gradle"
 apply from: "gradle/dependencies.gradle"
+apply from: "gradle/minifiedDependencies.gradle"
 apply from: "gradle/wrapper.gradle"
 apply from: "gradle/idea.gradle"
 apply from: "gradle/eclipse.gradle"
@@ -256,6 +257,10 @@ configurations {
     testRuntime {
         extendsFrom runtime
         extendsFrom gradlePlugins
+    }
+
+    all {
+        attributes.attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME_JARS))
     }
 }
 
