--- a/released-versions.json
+++ b/released-versions.json
@@ -1,16 +1,20 @@
 {
     "latestReleaseSnapshot": {
-        "buildTime": "20171107130851+0000",
-        "version": "4.3.1-20171107130851+0000"
+        "buildTime": "20171130161825+0000",
+        "version": "4.4-20171130161825+0000"
     },
     "latestRc": {
-        "buildTime": "20171026162557+0000",
-        "version": "4.3-rc-4"
+        "buildTime": "20171204084815+0000",
+        "version": "4.4-rc-6"
     },
     "finalReleases": [
         {
-            "version": "4.3.1",
-            "buildTime": "20171108085945+0000"
+            "version": "4.4",
+            "buildTime": "20171206090506+0000"
+        },
+        {
+            "buildTime": "20171108085945+0000",
+            "version": "4.3.1"
         },
         {
             "buildTime": "20171030154329+0000",
