--- a/subprojects/docs/src/samples/ivypublish/build.gradle
+++ b/subprojects/docs/src/samples/ivypublish/build.gradle
@@ -51,7 +51,7 @@ uploadArchives {
         assert (root.configurations.conf.collect { it.@name } as Set) == ['archives', 'apiElements', 'compile', 'compileClasspath', 'compileOnly', 'default',
                                                                           'implementation', 'runtime', 'runtimeClasspath', 'runtimeElements',
                                                                           'runtimeOnly', 'testCompile', 'testCompileClasspath', 'testCompileOnly',
-                                                                          'testImplementation', 'testRuntime', 'testRuntimeClasspath', 'testRuntimeOnly'] as Set
+                                                                          'testImplementation', 'testRuntime', 'testRuntimeClasspath', 'testRuntimeOnly', 'annotationProcessor', 'testAnnotationProcessor'] as Set
         assert root.dependencies.dependency.find { it.@org == 'junit' }.attributes() == [org: 'junit', name: 'junit', rev: '4.12', conf: 'compile->default']
         assert root.dependencies.dependency.find { it.@org == 'ivypublish' }.attributes() == [org: 'ivypublish', name: 'subproject', rev: 'unspecified',
                 conf: 'compile->default']
