--- a/subprojects/testing-junit-platform/testing-junit-platform.gradle
+++ b/subprojects/testing-junit-platform/testing-junit-platform.gradle
@@ -18,13 +18,9 @@ sourceCompatibility = 1.8
 
 dependencies {
     compile project(':core')
-    compile project(':platformJvm')
-    compile project(':languageJava')
     compile project(':testingBase')
     compile project(':plugins')
 
-    // FIXME: this should be compileonly since it will be provided by user and only needed by worker jvm
-    // but fails on some validation tasks
     compile libraries.junitPlatform
 }
 
@@ -34,7 +30,6 @@ useTestFixtures(project: ':diagnostics')
 useTestFixtures(project: ':messaging')
 useTestFixtures(project: ':baseServices')
 
-// FIXME: classcyel fails, maybe due to Java 8 usage?
+// FIXME: classcyle fails, maybe due to Java 8 usage?
 //useClassycle()
-
 strictCompile()
