--- a/subprojects/testing-junit-platform/src/integTest/resources/org/gradle/testing/junit5/JUnitPlatformIntegrationTest/executesAllTestsInClasspathRoots/build.gradle
+++ b/subprojects/testing-junit-platform/src/integTest/resources/org/gradle/testing/junit5/JUnitPlatformIntegrationTest/executesAllTestsInClasspathRoots/build.gradle
@@ -9,3 +9,9 @@ dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.2'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.2'
 }
+
+junit {
+    testLogging {
+        events 'started', 'skipped', 'failed', 'started'
+    }
+}
