--- a/subprojects/testing-jvm/testing-jvm.gradle
+++ b/subprojects/testing-jvm/testing-jvm.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile libraries.testng
     compile libraries.bsh
 
-    compileOnly libraries.junitPlatform
+    compile libraries.junitPlatform
 
     testCompile 'com.google.inject:guice:2.0@jar' // this is for TestNG
 
