--- a/subprojects/testing-jvm/src/integTest/resources/org/gradle/testing/junit5/JUnitPlatformIntegrationTest/executesAllTests/build.gradle
+++ b/subprojects/testing-jvm/src/integTest/resources/org/gradle/testing/junit5/JUnitPlatformIntegrationTest/executesAllTests/build.gradle
@@ -16,4 +16,19 @@ test {
         showStandardStreams = true
     }
     systemProperty 'java.util.logging.config.file', file('logging.properties').absolutePath
+
+    beforeSuite { descriptor ->
+        println "Listener starting suite: Test[id=${descriptor.className}#${descriptor.name}, parent=${descriptor.parent}]"
+    }
+    afterSuite { descriptor, result ->
+        println "Listener ending suite: Test[id=${descriptor.className}#${descriptor.name}, parent=${descriptor.parent}]"
+    }
+
+    beforeTest { descriptor ->
+        println "Listener starting test: Test[id=${descriptor.className}#${descriptor.name}, parent=${descriptor.parent}]"
+    }
+
+    afterTest { descriptor, result ->
+        println "Listener ending test: Test[id=${descriptor.className}#${descriptor.name}, parent=${descriptor.parent}]"
+    }
 }
