Added a `SetProperty<T>` type as a convenience for dealing with properties of `Set<T>`.

--- a/subprojects/docs/src/samples/providers/propertyAndProvider/build.gradle
+++ b/subprojects/docs/src/samples/providers/propertyAndProvider/build.gradle
@@ -3,9 +3,9 @@ class Greeting extends DefaultTask {
     @Input
     final Property<String> message = project.objects.property(String)
 
-    // Read-only property
+    // Read-only property calculated from the message
     @Internal
-    final Provider<String> fullMessage = project.provider { message.get() + " from Gradle" }
+    final Provider<String> fullMessage = message.map { it + " from Gradle" }
 
     @TaskAction
     void printMessage() {
