--- a/subprojects/testing-native/testing-native.gradle
+++ b/subprojects/testing-native/testing-native.gradle
@@ -28,6 +28,7 @@ useTestFixtures(project: ':platformNative')
 useTestFixtures(project: ':diagnostics')
 useTestFixtures(project: ':platformBase')
 useTestFixtures(project: ':testingBase')
+useTestFixtures(project: ':languageNative')
 
 useClassycle()
 strictCompile()
