--- a/subprojects/internal-testing/internal-testing.gradle
+++ b/subprojects/internal-testing/internal-testing.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile libraries.commons_io
     compile libraries.ant
     compile libraries.asm
+    compile libraries.asm_tree
     compile libraries.junit
     compile libraries.jmock
     compile libraries.spock
