--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -27,7 +27,10 @@ versions.maven = '3.0.4'
 versions.httpclient = '4.4.1'
 
 libraries.ant = 'org.apache.ant:ant:1.9.9'
-libraries.asm =  'org.ow2.asm:asm-debug-all:6.0_BETA'
+libraries.asm =  'org.ow2.asm:asm:6.0'
+libraries.asm_commons =  'org.ow2.asm:asm-commons:6.0'
+libraries.asm_util =  'org.ow2.asm:asm-util:6.0'
+libraries.asm_tree =  'org.ow2.asm:asm-tree:6.0'
 libraries.cglib = 'cglib:cglib:3.2.5'
 libraries.bndlib = 'biz.aQute.bnd:biz.aQute.bndlib:3.4.0'
 libraries.commons_cli = 'commons-cli:commons-cli:1.2'
@@ -357,8 +360,14 @@ def changeVersionInMetadata(DependencyMetadata dependencyMetadata, String versio
 allprojects {
     configurations.all {
         resolutionStrategy.eachDependency { details ->
-            if (details.requested.group == 'org.ow2.asm') {
+            if (details.requested.name == 'asm') {
                 details.useTarget(libraries.asm)
+            } else if (details.requested.name == 'asm-util') {
+                details.useTarget(libraries.asm_util)
+            } else if (details.requested.name == 'asm-commons') {
+                details.useTarget(libraries.asm_commons)
+            } else if (details.requested.name == 'asm-tree') {
+                details.useTarget(libraries.asm_tree)
             } else if (details.requested.group == 'org.codehaus.groovy') {
                 details.useTarget(libraries.groovy)
             } else if (details.requested.group == 'cglib') {
