--- a/subprojects/language-scala/language-scala.gradle
+++ b/subprojects/language-scala/language-scala.gradle
@@ -1,4 +1,3 @@
-
 // Compiler daemon
 sourceCompatibility = 1.6
 
@@ -11,9 +10,12 @@ dependencies {
     compileOnly libraries.zinc
 }
 
+testFixtures {
+    from(':core')
+    from(':languageJvm', 'testFixtures')
+    from(':platformBase')
+    from(':launcher')
+    from(':plugins')
+}
+
 strictCompile()
-useTestFixtures()
-useTestFixtures(project: ":languageJvm", sourceSet: 'testFixtures')
-useTestFixtures(project: ":platformBase")
-useTestFixtures(project: ":launcher")
-useTestFixtures(project: ":plugins")
