--- a/subprojects/language-scala/language-scala.gradle
+++ b/subprojects/language-scala/language-scala.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'strict-compile'
+}
+
 // Compiler daemon
 sourceCompatibility = 1.6
 
@@ -17,5 +21,3 @@ testFixtures {
     from(':launcher')
     from(':plugins')
 }
-
-strictCompile()
