--- a/subprojects/docs/src/samples/userguide/repositories/declaringCustomRepository/build.gradle
+++ b/subprojects/docs/src/samples/userguide/repositories/declaringCustomRepository/build.gradle
@@ -5,3 +5,11 @@ repositories {
     }
 }
 //END SNIPPET custom-repository
+
+task checkRepositories {
+    doLast {
+        assert repositories.size() == 1
+        assert repositories[0] instanceof MavenArtifactRepository
+        assert repositories[0].url == new URI("http://repo.mycompany.com/maven2")
+    }
+}
