--- a/subprojects/docs/src/samples/userguide/repositories/declaringMultipleRepositories/build.gradle
+++ b/subprojects/docs/src/samples/userguide/repositories/declaringMultipleRepositories/build.gradle
@@ -15,7 +15,7 @@ configurations {
 }
 
 dependencies {
-    libs 'com.restlet.client:commons:2.0.0'
+    libs "com.restlet.client:commons:2.0.0"
 }
 
 task copyLibs(type: Copy) {
