Make all Gradle features available in performance tests
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/build-scan-performance/build-scan-performance.gradle
+++ b/subprojects/build-scan-performance/build-scan-performance.gradle
@@ -21,6 +21,9 @@ performanceReport {
 }
 
 dependencies {
+    // so that all Gradle features are available
+    performanceTestRuntime rootProject.configurations.testRuntime.allDependencies
+
     testFixturesCompile project(':internalPerformanceTesting')
 }
 
