Introduce perf test comparing changes made to the gradle/gradle build
Running against current Gradle

Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/performance/templates.gradle
+++ b/subprojects/performance/templates.gradle
@@ -30,6 +30,11 @@ task gradleBuildCurrent(type: RemoteProject) {
     ref = provider { rootProject.determineCommitId.commitId }
 }
 
+task gradleBuildBaseline(type: RemoteProject) {
+    remoteUri = rootDir.absolutePath
+    ref = '3c30656'
+}
+
 // === Java ===
 ['largeMonolithicJavaProject', 'largeJavaMultiProject',
  'mediumMonolithicJavaProject', 'mediumJavaMultiProject', 'mediumJavaMultiProjectWithTestNG', 'mediumJavaCompositeBuild', 'mediumJavaPredefinedCompositeBuild',
