--- a/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForAllConfigurations/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForAllConfigurations/build.gradle
@@ -5,13 +5,20 @@ repositories {
 }
 
 //START SNIPPET exclude-transitive-dependencies
-configurations.all {
-    exclude group: 'javax.jms', module: 'jms'
-    exclude group: 'com.sun.jdmk', module: 'jmxtools'
-    exclude group: 'com.sun.jmx', module: 'jmxri'
+configurations {
+    all {
+        exclude group: 'javax.jms', module: 'jms'
+        exclude group: 'com.sun.jdmk', module: 'jmxtools'
+        exclude group: 'com.sun.jmx', module: 'jmxri'
+    }
 }
 
 dependencies {
     implementation 'log4j:log4j:1.2.15'
 }
 //END SNIPPET exclude-transitive-dependencies
+
+task copyLibs(type: Copy) {
+    from configurations.compileClasspath
+    into "$buildDir/libs"
+}
