--- a/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForConfiguration/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForConfiguration/build.gradle
@@ -6,12 +6,19 @@ repositories {
 
 //START SNIPPET exclude-transitive-dependencies
 configurations {
-    implementation.exclude group: 'javax.jms', module: 'jms'
-    implementation.exclude group: 'com.sun.jdmk', module: 'jmxtools'
-    implementation.exclude group: 'com.sun.jmx', module: 'jmxri'
+    implementation {
+        exclude group: 'javax.jms', module: 'jms'
+        exclude group: 'com.sun.jdmk', module: 'jmxtools'
+        exclude group: 'com.sun.jmx', module: 'jmxri'
+    }
 }
 
 dependencies {
     implementation 'log4j:log4j:1.2.15'
 }
 //END SNIPPET exclude-transitive-dependencies
+
+task copyLibs(type: Copy) {
+    from configurations.compileClasspath
+    into "$buildDir/libs"
+}
