Better docs around GradleBuildPerformanceTest baseline
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/performance/templates.gradle
+++ b/subprojects/performance/templates.gradle
@@ -32,6 +32,8 @@ task gradleBuildCurrent(type: RemoteProject) {
 
 task gradleBuildBaseline(type: RemoteProject) {
     remoteUri = rootDir.absolutePath
+    // Remember to update accordingly when rebasing/squashing
+    // Do not use the "Rebase and merge" nor "Squash and merge" Github buttons when merging a PR that change the baseline
     ref = '3c30656'
 }
 
