Extract allTestRuntimeDependencies and reuse
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/build-scan-performance/build-scan-performance.gradle
+++ b/subprojects/build-scan-performance/build-scan-performance.gradle
@@ -22,7 +22,7 @@ performanceReport {
 
 dependencies {
     // so that all Gradle features are available
-    performanceTestRuntime rootProject.configurations.testRuntime.allDependencies
+    performanceTestRuntime allTestRuntimeDependencies
 
     testFixturesCompile project(':internalPerformanceTesting')
 }
