Fixes wordings and the use of implementation vs. compile configuration

--- a/subprojects/docs/src/samples/userguide/dependencies/declaringProjectDependencies/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/declaringProjectDependencies/build.gradle
@@ -8,8 +8,8 @@ project(':api')
 //START SNIPPET project-dependencies
 project(':web-service') {
     dependencies {
-        compile project(':utils')
-        compile project(':api')
+        implementation project(':utils')
+        implementation project(':api')
     }
 }
 //END SNIPPET project-dependencies
