--- a/subprojects/docs/src/samples/userguide/tutorial/configureTaskUsingProjectProperty/build.gradle
+++ b/subprojects/docs/src/samples/userguide/tutorial/configureTaskUsingProjectProperty/build.gradle
@@ -1,8 +1,6 @@
-ext.isCI = project.hasProperty("isCI")
-
 task performRelease {
     doLast {
-        if (isCI) {
+        if (project.hasProperty("isCI")) {
             println("Performing release actions")
         } else {
             throw new InvalidUserDataException("Cannot perform release outside of CI")
