--- a/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForConfiguration/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForConfiguration/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java-library'
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
@@ -6,7 +6,7 @@ repositories {
 
 //START SNIPPET exclude-transitive-dependencies
 configurations {
-    implementation {
+    compile {
         exclude group: 'javax.jms', module: 'jms'
         exclude group: 'com.sun.jdmk', module: 'jmxtools'
         exclude group: 'com.sun.jmx', module: 'jmxri'
