--- a/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForDependency/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForDependency/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java-library'
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
@@ -6,7 +6,7 @@ repositories {
 
 //START SNIPPET exclude-transitive-dependencies
 dependencies {
-    implementation('log4j:log4j:1.2.15') {
+    compile('log4j:log4j:1.2.15') {
         exclude group: 'javax.jms', module: 'jms'
         exclude group: 'com.sun.jdmk', module: 'jmxtools'
         exclude group: 'com.sun.jmx', module: 'jmxri'
