Clearly indicate that we use a method call here

--- a/subprojects/docs/src/samples/userguide/dependencies/disablingTransitiveDependencyResolutionForConfiguration/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/disablingTransitiveDependencyResolutionForConfiguration/build.gradle
@@ -5,10 +5,8 @@ repositories {
 }
 
 //START SNIPPET transitive-per-configuration
-configurations {
-    all {
-        transitive = false
-    }
+configurations.all {
+    transitive = false
 }
 
 dependencies {
