--- a/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForAllConfigurations/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForAllConfigurations/build.gradle
@@ -5,12 +5,10 @@ repositories {
 }
 
 //START SNIPPET exclude-transitive-dependencies
-configurations {
-    all {
-        exclude group: 'javax.jms', module: 'jms'
-        exclude group: 'com.sun.jdmk', module: 'jmxtools'
-        exclude group: 'com.sun.jmx', module: 'jmxri'
-    }
+configurations.all {
+    exclude group: 'javax.jms', module: 'jms'
+    exclude group: 'com.sun.jdmk', module: 'jmxtools'
+    exclude group: 'com.sun.jmx', module: 'jmxri'
 }
 
 dependencies {
