Compile configuration has been soft-deprecated

--- a/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForConfiguration/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/excludingTransitiveDependenciesForConfiguration/build.gradle
@@ -6,7 +6,7 @@ repositories {
 
 //START SNIPPET exclude-transitive-dependencies
 configurations {
-    compile {
+    implementation {
         exclude group: 'javax.jms', module: 'jms'
         exclude group: 'com.sun.jdmk', module: 'jmxtools'
         exclude group: 'com.sun.jmx', module: 'jmxri'
