--- a/gradle/idea.gradle
+++ b/gradle/idea.gradle
@@ -1,4 +1,5 @@
 import org.jetbrains.gradle.ext.runConfigurations.*
+import org.jetbrains.gradle.ext.*
 
 buildscript {
     dependencies {
@@ -135,6 +136,35 @@ limitations under the License."""
             }
         }
 
+        codeStyle {
+            USE_SAME_IDENTS = true // deprecated?
+            RIGHT_MARGIN = 200
+
+            java {
+                WRAP_COMMENTS = true
+                CLASS_COUNT_TO_USE_IMPORT_ON_DEMAND = 999
+                KEEP_CONTROL_STATEMENT_IN_ONE_LINE = false
+                JD_ALIGN_PARAM_COMMENTS = false
+                JD_ALIGN_EXCEPTION_COMMENTS = false
+                JD_P_AT_EMPTY_LINES = false
+                JD_KEEP_EMPTY_PARAMETER = false
+                JD_KEEP_EMPTY_EXCEPTION = false
+                JD_KEEP_EMPTY_RETURN = false
+                IF_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+                DOWHILE_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+                WHILE_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+                FOR_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+            }
+
+            groovy {
+                ALIGN_NAMED_ARGS_IN_MAP = false
+                CLASS_COUNT_TO_USE_IMPORT_ON_DEMAND = 999
+                IF_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+                DOWHILE_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+                WHILE_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+                FOR_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+            }
+        }
     }
 
     project {
@@ -148,43 +178,6 @@ limitations under the License."""
                 // Set gradle home
                 def gradleSettings = node.appendNode('component', [name: 'GradleSettings'])
                 gradleSettings.appendNode('option', [name: 'SDK_HOME', value: gradle.gradleHomeDir.absolutePath])
-
-                // Code formatting options
-                def codeFormatSettings = new XmlParser().parseText('''
-          <component name="ProjectCodeStyleSettingsManager">
-            <option name="PER_PROJECT_SETTINGS">
-              <value>
-                <option name="USE_SAME_INDENTS" value="true" />
-                <option name="CLASS_COUNT_TO_USE_IMPORT_ON_DEMAND" value="999" />
-                <option name="RIGHT_MARGIN" value="200" />
-                <option name="JD_ALIGN_PARAM_COMMENTS" value="false" />
-                <option name="JD_ALIGN_EXCEPTION_COMMENTS" value="false" />
-                <option name="JD_P_AT_EMPTY_LINES" value="false" />
-                <option name="JD_KEEP_EMPTY_PARAMETER" value="false" />
-                <option name="JD_KEEP_EMPTY_EXCEPTION" value="false" />
-                <option name="JD_KEEP_EMPTY_RETURN" value="false" />
-                <option name="WRAP_COMMENTS" value="true" />
-                <option name="IF_BRACE_FORCE" value="3" />
-                <option name="DOWHILE_BRACE_FORCE" value="3" />
-                <option name="WHILE_BRACE_FORCE" value="3" />
-                <option name="FOR_BRACE_FORCE" value="3" />
-                <codeStyleSettings language="JAVA">
-                  <option name="KEEP_CONTROL_STATEMENT_IN_ONE_LINE" value="false" />
-                  <option name="IF_BRACE_FORCE" value="3" />
-                  <option name="DOWHILE_BRACE_FORCE" value="3" />
-                  <option name="WHILE_BRACE_FORCE" value="3" />
-                  <option name="FOR_BRACE_FORCE" value="3" />
-                </codeStyleSettings>
-                <GroovyCodeStyleSettings>
-                  <option name="ALIGN_NAMED_ARGS_IN_MAP" value="false" />
-                  <option name="CLASS_COUNT_TO_USE_IMPORT_ON_DEMAND" value="999" />
-                </GroovyCodeStyleSettings>
-              </value>
-            </option>
-            <option name="USE_PER_PROJECT_SETTINGS" value="true" />
-          </component>
-        ''')
-                node.append(codeFormatSettings)
 
                 node.append(new NodeBuilder().component(name: 'FrameworkDetectionExcludesConfiguration') {
                   type(id: 'android')
