--- a/gradle/idea.gradle
+++ b/gradle/idea.gradle
@@ -150,42 +150,33 @@ limitations under the License."""
                 JD_KEEP_EMPTY_PARAMETER = false
                 JD_KEEP_EMPTY_EXCEPTION = false
                 JD_KEEP_EMPTY_RETURN = false
-                IF_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
-                DOWHILE_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
-                WHILE_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
-                FOR_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+                IF_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
+                DOWHILE_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
+                WHILE_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
+                FOR_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
             }
 
             groovy {
                 ALIGN_NAMED_ARGS_IN_MAP = false
                 CLASS_COUNT_TO_USE_IMPORT_ON_DEMAND = 999
-                IF_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
-                DOWHILE_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
-                WHILE_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
-                FOR_BRACE_FORCE = BraceForce.FORCE_BRACES_ALWAYS
+                IF_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
+                DOWHILE_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
+                WHILE_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
+                FOR_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
             }
         }
+
+        gradleSettings {
+            sdkHome = gradle.gradleHomeDir.absolutePath
+        }
+
+        doNotDetectFrameworks("android", "web")
     }
 
     project {
         wildcards += ['?*.gradle']
 
         vcs = 'Git'
-        ipr {
-            withXml { provider ->
-                def node = provider.asNode()
-
-                // Set gradle home
-                def gradleSettings = node.appendNode('component', [name: 'GradleSettings'])
-                gradleSettings.appendNode('option', [name: 'SDK_HOME', value: gradle.gradleHomeDir.absolutePath])
-
-                node.append(new NodeBuilder().component(name: 'FrameworkDetectionExcludesConfiguration') {
-                  type(id: 'android')
-                  type(id: 'web')
-                })
-
-            }
-        }
     }
 
 }
